syntax = "proto2";
package bsn_msg_gate_server;
  
 